Menu Checkbox Style

--- a/Resources/Themes/LightTheme.xaml
+++ b/Resources/Themes/LightTheme.xaml
@@ -25,6 +25,10 @@
         <Setter Property="Foreground" Value="{StaticResource Text}"/>
     </Style>
 
+    <Style TargetType="CheckBox" x:Key="MenuCheckbox">
+        <Setter Property="Foreground" Value="Black"/>
+    </Style>
+
     <Style TargetType="{x:Type controls:ImageButton}">
         <Setter Property="Unhighlighted" Value="{StaticResource UnhighlightedInactive}"/>
         <Setter Property="Highlighted" Value="{StaticResource HighlightedInactive}"/>
