--- a/Resources/Themes/DarkTheme.xaml
+++ b/Resources/Themes/DarkTheme.xaml
@@ -25,8 +25,8 @@
         <Setter Property="Foreground" Value="{StaticResource Text}"/>
     </Style>
 
-    <Style TargetType="Menu">
-        <Setter Property="Background" Value="{StaticResource Background}"/>
+    <Style TargetType="CheckBox" x:Key="MenuCheckbox">
+        <Setter Property="Foreground" Value="Black"/>
     </Style>
 
     <Style TargetType="ListItem">
