--- a/WPF/Windows/SettingsWindow.xaml
+++ b/WPF/Windows/SettingsWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:AAP.UI.Windows" xmlns:viewmodels="clr-namespace:AAP.UI.ViewModels"
         mc:Ignorable="d"
-        Title="ASCII Art Program Settings" ResizeMode="NoResize" SizeToContent="WidthAndHeight" MinWidth="250" MinHeight="150" MaxWidth="350" MaxHeight="400">
+        Title="Settings" ResizeMode="NoResize" SizeToContent="WidthAndHeight" MinWidth="250" MinHeight="150" MaxWidth="350" MaxHeight="400">
     <Window.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -18,14 +18,29 @@
             <viewmodels:SettingsWindowViewModel x:Name="WindowViewModel"/>
         </DockPanel.DataContext>
         
-        <Button Margin="10,0,10,5" VerticalAlignment="Bottom" DockPanel.Dock="Bottom" Content="Reset All" Command="{Binding ResetCommand}"/>
+        <Button Margin="10,0,10,5" VerticalAlignment="Bottom" DockPanel.Dock="Bottom" Content="Reset all" Command="{Binding ResetCommand}"/>
         <Button Margin="10,0,10,5" VerticalAlignment="Bottom" DockPanel.Dock="Bottom" Content="Apply changes" Command="{Binding ApplyCommand}" IsEnabled="{Binding ChangesMade}"/>
         <StackPanel Margin="10,5,10,5" DockPanel.Dock="Top">
-            <DockPanel DockPanel.Dock="Top">
-                <Label Content="Canvas Font" HorizontalAlignment="Left"/>
-                <ComboBox Height="25" SelectedItem="{Binding CanvasTypefaceSource}" ItemsSource="{Binding TypefaceSources}" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch"/>
-            </DockPanel>
-            <CheckBox Content="Dark Mode" HorizontalAlignment="Left" Padding="0,0,5,0" Margin="5,5,5,5" Style="{StaticResource ContentLeftCheckBoxStyle}" IsChecked="{Binding DarkMode}" Foreground="{DynamicResource Text}"/>
+            <Label Content="User Interface"/>
+            <StackPanel Margin="10,0,0,0">
+                <DockPanel DockPanel.Dock="Top">
+                    <Label Content="Canvas Font" HorizontalAlignment="Left"/>
+                    <ComboBox Height="25" SelectedItem="{Binding CanvasTypefaceSource}" ItemsSource="{Binding TypefaceSources}" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch"/>
+                </DockPanel>
+                <CheckBox Content="Dark mode" HorizontalAlignment="Left" Padding="0,0,5,0" Margin="5,5,5,5" Style="{StaticResource ContentLeftCheckBoxStyle}" IsChecked="{Binding DarkMode}" Foreground="{DynamicResource Text}"/>
+            </StackPanel>
+            <Separator/>
+            <Label Content="Files"/>
+            <StackPanel Margin="10,0,0,0">
+                <CheckBox Content="Autosave files" Padding="0,0,5,0" Margin="5,5,5,5" Style="{StaticResource ContentLeftCheckBoxStyle}" IsChecked="{Binding AutosaveFiles}" Foreground="{DynamicResource Text}"/>
+                <DockPanel DockPanel.Dock="Top">
+                    <Label Content="Autosave every " HorizontalAlignment="Left"/>
+                    <Label Content="minutes" HorizontalAlignment="Left" DockPanel.Dock="Right"/>
+                    <TextBox Text="{Binding AutosaveIntervalMinutesText}" Margin="0,3,0,3"/>
+                </DockPanel>
+                <Button Margin="10,5,10,5" VerticalAlignment="Bottom" DockPanel.Dock="Bottom" Content="Open autosaves folder" Command="{Binding OpenAutosavesCommand}"/>
+            </StackPanel>
+            
         </StackPanel>
     </DockPanel>
 </Window>
